test/samples/invalid/tc/nested_polymorphic1.maruir
struct S1<M> {
	arr1: uint8[] *M;
}

struct S2<M, N> {
	ptr1: S1<N> *M;
	ptr2: uint16[] *N;
}

fun getSArr1<P, Q>(ptrS2: S2<P,Q> *Q): uint8[] *P
locals ptrS1: S1<Q> *P,
	   ptrArr1: uint8[] *P;
{
	entry:

	load ptrS2.ptr1 in ptrS1;
	load ptrS1.arr1 in ptrArr1;

	return ptrArr1;
}